--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,21 @@
   );
 }
 .bg-gradient {
-  background: linear-gradient(90deg, rgba(69,49,56,0.2660713943780637) 0%, rgba(50,147,230,0.33049716468618695) 48%);
-  
+  background: linear-gradient(
+    90deg,
+    rgba(69, 49, 56, 0.2660713943780637) 0%,
+    rgba(50, 147, 230, 0.33049716468618695) 48%
+  );
+}
+.ql-container {
+  font-size: 16px !important;
+}
+.ant-btn-primary {
+  background-color: #427cce; 
+  color: #fff; 
+}
+
+.ant-image-crop-upload-btn:hover {
+  background-color: #45a049; /* Change this to your desired background color on hover */
+  border-color: #45a049; /* Change this to your desired border color on hover */
 }
